Added: Start data selection

--- a/css/simple.css
+++ b/css/simple.css
@@ -101,4 +101,14 @@ label{
     resize: vertical;
 }
 
+select{
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent;
+}
  
